# unet

./: .gitignore  CMakeLists.txt  LICENSE  PandocCheatsheet.md  README.md  TODO
.github/workflows/: build.yml
cmake/: serverConfig.cmake.in
config/: https.toml
docs/: installation.md  mkdocs.yml  request-response.md  roadmap.md
examples/: SimpleClient.cpp  SimpleServer.cpp
include/Components/: URI.hpp
include/Components/Compression/: CompressionBase.h  HPACK.h  QPACK.h  br.h  deflate.h  gzip.h  lz4.h  zstd.h
include/Components/DataTypes/Application/: UrlEncoded.h
include/Components/DataTypes/Multipart/: FormData.h  MultipartFormData.h
include/Components/Encodings/: PercentEncoded.h  PunycodeEncoding.h
include/Components/Headers/: ContentDisposition.h  ContentType.h  ETag.h  HTTPDate.h  Headers.h
include/Components/URL/: QueryParams.h  URL.h
include/Components/URN/: QueryParams.h
include/Coroutines/: Coroutine.h
include/Modules/StreamHandlers/: OpenSSL.h
include/Protocols/: protocols.h
include/Protocols/HTTP/: EndpointHandler.h  Experimental.h  HTTP1.h  HeaderEnum.h  Headers.h  Message.h  Middlewares.h  RadixRouter.h  RouterCommon.h  header_lookup.h  headers.gperf
include/Protocols/HTTP/Experimental/: Concepts.hpp  Generic.hpp  HTTP1.hpp  HTTP2.hpp  Request.h
include/Protocols/websocket/: Websocket.h  WebsocketBase.h
include/client/: Client.h
include/server/: Acceptor.h  client_handler.h  server.h
include/utils/: ParseError.h  TypeID.h  crc32.h  globals.h  header_utils.h  string_utils.h  utils.h
include/utils/HTTPUtils/: HTTPUtils.h
include/utils/configuration/: ConfigReader.h
include/utils/crypto/: SHA1.h
include/utils/ssl/: CTX_util.h  SSLHelper.h  data.h
include/utils/toml/: toml.hpp
new-include/unet/core/: acceptor.hpp
new-include/unet/core/streams/: openssl.hpp  plaintext.hpp
new-include/unet/header/: generic.hpp
new-include/unet/http/: header.hpp  request.hpp  response.hpp  server.hpp
new-include/unet/http/parser/: http1.hpp
new-include/unet/http/router/: radix.hpp  route.hpp
new-include/unet/mime/multipart/form_data/: generic.hpp
new-src/http/parser/: http1.cpp
new-src/http/router/: radix.cpp
new-tests/: CMakeLists.txt  test_http1_parser.cpp
server/: CMakeLists.txt  main.cpp
server/core/: application.cpp  application.h  net.cpp  net.h
server/protocols/: protocols.h
server/protocols/http/: TODO  http1.cpp  http1.h  http2.cpp  http2.h  http3.cpp  http3.h  http_base.cpp  http_base.h  http_basic_endpoint_handler.cpp  http_basic_endpoint_handler.h  http_endpoint_handler.h  http_handler_module.h  http_message.cpp  http_message.h
server/server/: TODO  server.cpp  server.h
server/utils/: globals.cpp  globals.h
server/utils/configuration/: ConfigReader.cpp  ConfigReader.h
server/utils/socket/: socket.cpp  socket.h
server/utils/toml/: toml.hpp
src/: main.cpp
src/Components/Compression/: QPACK.cpp  br.cpp  gzip.cpp
src/Components/DataTypes/Application/: UrlEncoded.cpp
src/Components/DataTypes/Multipart/: FormData.cpp  MultipartFormData.cpp
src/Components/DataTypes/Text/: Plain.cpp
src/Components/Encodings/: PercentEncoded.cpp  PunycodeEncoding.cpp
src/Components/Headers/: ContentDisposition.cpp  ContentType.cpp  ETag.cpp  HTTPDate.cpp  Headers.cpp
src/Components/URL/: QueryParams.cpp  URL.cpp
src/Protocols/HTTP/: EndpointHandler.cpp  HTTP1.cpp  Headers.cpp  Message.cpp  Middlewares.cpp  RadixRouter.cpp  RouterCommon.cpp  headers_lookup.cpp
src/Protocols/websocket/: Websocket.cpp  WebsocketBase.cpp
src/server/: client_handler.cpp  server.cpp
src/tests/: PunycodeEncodingTests.cpp
src/utils/: globals.cpp  header_utils.cpp  utils.cpp
src/utils/HTTPUtils/: HTTPUtils.cpp
src/utils/configuration/: ConfigReader.cpp
src/utils/crypto/: SHA1.cpp
src/utils/ssl/: data.cpp
src/utils/toml/: toml.cpp
tests/: CMakeLists.txt
tests/EncodingTests/: CMakeLists.txt  PunycodeEncodingTests.cpp
tests/RadixTrieTests/: CMakeLists.txt  RadixTrieTests.cpp
tests/ServersTests/: CMakeLists.txt  ServerBuildTests.cpp
